--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,23 @@
 
 <body>
   <app-root></app-root>
+  <!--
+    für Angular 17:
+
+Zur Installation folgende Befehle verwenden:
+
+Angular CLI:
+
+npm i -g @angular/cli@17.0.6
+
+firebase-tools:
+
+npm install -g firebase-tools@13.0.1
+
+AngularFire:
+
+ng add @angular/fire@17.0.0
+  -->
 </body>
 
 </html>
